# DE_case_bs

./: README.md  example.env  pipeline_metadata.json  pyproject.toml
brewery_case/application/: main.py
brewery_case/domain/models/: logger_model.py  pipeline_model.py
brewery_case/infra/configs/: settings.py
brewery_case/infra/constants/: constants.py  texts.py
brewery_case/infra/repository/: brewery_api_service.py  enrich_gold_data_service.py  process_silver_data_service.py  save_bronze_data_service.py
brewery_case/infra/repository/helpers/: dry_run_helper.py  init_class_from_metadata.py
brewery_case/infra/repository/services/: init_class_from_metadata.py
data/bronze/processed/: breweries_1755394032.json  breweries_1755397310.json
data/gold/total_breweries_by_location/: total_breweries_by_location.parquet
data/gold/total_breweries_by_type/: total_breweries_by_type.parquet
data/silver/: 1755397325.parquet
